--- a/client/src/features/Header/styles.module.scss
+++ b/client/src/features/Header/styles.module.scss
@@ -1,6 +1,6 @@
 .header {
   width: 100%;
-  height: 100px;
+  height: clamp(50px, 5.208vw, 200px);
   display: flex;
   align-items: center;
   justify-content: center;
