--- a/client/src/widgets/Screens/Dashboard/ui/styles.module.scss
+++ b/client/src/widgets/Screens/Dashboard/ui/styles.module.scss
@@ -1,14 +1,16 @@
 .sites_section {
-  width: 100%;
+  width: 90%;
   display: flex;
   flex-direction: column;
+  align-items: flex-end;
+  margin: auto;
+  @apply mt-8;
 
   &__row {
     width: 90%;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    border: 2px solid red;
     margin: auto;
     @apply gap-4;
   }
