--- a/client/src/shared/ui/KebabMenu/styles.module.scss
+++ b/client/src/shared/ui/KebabMenu/styles.module.scss
@@ -1,10 +1,23 @@
-.kebab_menu {
+.button_kebab {
   position: absolute;
+  @apply p-3;
+  @apply top-1;
+  @apply right-1;
+}
+
+.kebab_menu {
   transition: 0.3s all;
   @apply text-primary;
-  @apply top-4;
-  @apply right-4;
+
   &:hover {
     @apply text-primary-dark;
   }
+}
+
+.kebab_opened {
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  @apply bg-primary-ALMOST_WHITE;
 }
