--- a/client/src/widgets/Form/styles/styles.module.scss
+++ b/client/src/widgets/Form/styles/styles.module.scss
@@ -1,27 +1,5 @@
 @import "../../../shared/styles/mixins.scss";
 
-@mixin text-orange(
-  $margin: 0,
-  $text-size: 1rem,
-  $orange-text-size: 1rem,
-  $font-weight: 500
-) {
-  .text_with_detail {
-    margin-top: $margin;
-    font-size: $text-size;
-    font-weight: $font-weight;
-    font-weight: 500;
-  }
-  .text_orange {
-    @apply text-primary;
-    font-size: $text-size;
-    font-weight: $font-weight;
-    transition: 0.3s ease-in-out;
-    &:hover {
-      @apply text-primary-dark;
-    }
-  }
-}
 
 .registration {
   display: flex;
@@ -48,5 +26,11 @@
     justify-content: center;
     flex-direction: column;
     font-size: clamp(9px, 0.93744vw, 36px);
+  }
+  .confirmation_input {
+    @apply mt-28;
+    display: flex;
+    flex-direction: row;
+    gap: clamp(8px,0.83328vw,32px);
   }
 }
