--- a/client/src/shared/ui/Inputs/DefaultInport/styles.module.scss
+++ b/client/src/shared/ui/Inputs/DefaultInport/styles.module.scss
@@ -1,4 +1,4 @@
-.default_input {
+.input--default{
   @apply mt-3;
   position: relative;
   font-size: clamp(8px, 0.83328vw, 32px);
@@ -13,6 +13,23 @@
   &:focus {
     @apply text-primary;
     border: 2px #ff5722 solid;
+    outline: 0;
+    outline-offset: 0;
+  }
+}
+
+.input--email {
+  width: clamp(41px,4.27056vw,164px);
+  font-size: clamp(20px,2.0832vw,80px);
+  text-align: center;
+  text-transform: capitalize;
+  border-right: none;
+  border-top: none;
+  border-left: none;
+  border-bottom:  2px rgba(255, 147, 114, 0.5) solid;
+  &:focus {
+    @apply text-primary;
+    border-bottom: 2px #ff5722 solid;
     outline: 0;
     outline-offset: 0;
   }
