--- a/client/src/shared/ui/UserPick/style.module.scss
+++ b/client/src/shared/ui/UserPick/style.module.scss
@@ -1,5 +1,4 @@
 .userpick {
-    border: 1px solid;
-    @apply border-primary p-3 rounded-md mt-2;
-    width: 98.3%;
+  @apply bg-primary-ALMOST_WHITE p-3 rounded-md mt-2;
+  width: 98.3%;
 }
