--- a/client/src/pages/styles/styles.module.scss
+++ b/client/src/pages/styles/styles.module.scss
@@ -1,17 +1,15 @@
 .users {
-    width: 86.6%;
-    margin: auto;
+  width: 98%;
+  @apply m-5;
 
-    &__text {
-        @apply text-primary;
-        @apply mt-8 mb-8 text-2xl;
-    }
+  &__text {
+    @apply text-primary;
+    @apply mt-8 mb-8 text-2xl;
+  }
 
-    &__box {
-        border: 1px solid;
-        @apply border-primary pt-4 pl-4;
-        @apply rounded-md;
-        width: 100dvh;
-        height: 70dvh;
-    }
+  &__box {
+    @apply pt-4 pl-4;
+    @apply rounded-md;
+    width: 100vh;
+  }
 }
