--- a/client/src/shared/ui/KebabMenu/styles.module.scss
+++ b/client/src/shared/ui/KebabMenu/styles.module.scss
@@ -16,8 +16,22 @@
 
 .kebab_opened {
   position: absolute;
+  z-index: 20;
   display: flex;
   flex-direction: column;
   align-items: center;
+  @apply right-4;
+  @apply rounded-md;
+  @apply shadow-md;
   @apply bg-primary-ALMOST_WHITE;
+
+  span {
+    @apply pl-3;
+    @apply pr-3;
+    transition: 0.3s all;
+
+    &:hover {
+      @apply text-primary;
+    }
+  }
 }
