--- a/client/src/shared/ui/UserPick/style.module.scss
+++ b/client/src/shared/ui/UserPick/style.module.scss
@@ -1,4 +1,6 @@
 .userpick {
+  display: flex;
+  justify-content: space-around;
   @apply bg-primary-ALMOST_WHITE p-3 rounded-md mt-2;
   width: 98.3%;
   transition: 0.3s ease-in-out;
