--- a/client/src/widgets/Screens/usersPage/styles.module.scss
+++ b/client/src/widgets/Screens/usersPage/styles.module.scss
@@ -11,9 +11,15 @@
     @apply pt-4 pl-4;
     @apply rounded-md;
     width: 100vh;
+    &__items {
+      display: flex;
+      justify-content: space-evenly;
+      @apply mb-4;
+    }
   }
 
   &__main {
-    // @apply -28;
+    @apply font-bold mt-24 ml-3;
+    font-size: clamp(17px, 1.77072vw, 68px);
   }
 }
