--- a/client/src/entities/WebsitePopup/styles.module.scss
+++ b/client/src/entities/WebsitePopup/styles.module.scss
@@ -3,23 +3,26 @@
   height: 100vh;
   background: rgba(0, 0, 0, 0.2);
   position: absolute;
-  z-index: 100;
+  z-index: 1;
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
 .website_popup {
-  width: 500px;
+  width: clamp(250px, 26.04vw, 1000px);
   height: auto;
   display: flex;
   flex-direction: column;
   align-items: center;
+  @apply p-8;
   @apply rounded-md;
   @apply bg-white;
 
   &__text {
     @apply text-2xl;
+    @apply mt-4;
+    @apply mb-4;
   }
 
   &__logo {
