--- a/client/src/shared/ui/Selector/style.module.scss
+++ b/client/src/shared/ui/Selector/style.module.scss
@@ -1,18 +1,27 @@
 .selector {
-  position: absolute;
-  background-color: #e6e6e6;
-  width: clamp(175px, 18.228vw, 700px);
-  @apply rounded-md max-h-32;
-  overflow-y: auto;
-  z-index: 100;
-  top: clamp(30px, 3.1248vw, 120px);
-
   &__items {
+    overflow-y: auto;
     @apply p-2;
     transition: 0.3s all;
+    @apply rounded-md max-h-32;
+    background-color: #e6e6e6;
+    font-size: clamp(6px, 0.62496vw, 24px);
+    &:hover {
+      @apply bg-primary text-primary-ALMOST_WHITE rounded-md;
+    }
   }
-
-  &__items:hover {
-    @apply bg-primary text-primary-ALMOST_WHITE rounded-md;
+  &__icon {
+    position: absolute;
+    right: clamp(8px, 0.83328vw, 32px);
+    bottom: clamp(8px, 0.83328vw, 32px);
+    height: clamp(8px, 0.83328vw, 32px);
+    width: clamp(8px, 0.83328vw, 32px);
+    z-index: 4;
+  }
+  &__dropdown {
+    position: absolute;
+    position: absolute;
+    z-index: 100;
+    width: 100%;
   }
 }
