--- a/client/src/shared/ui/Selector/style.module.scss
+++ b/client/src/shared/ui/Selector/style.module.scss
@@ -3,16 +3,12 @@
     overflow-y: auto;
     @apply p-2;
     transition: 0.3s all;
-<<<<<<< HEAD
     @apply rounded-md max-h-32;
     background-color: #e6e6e6;
-    font-size: clamp(6px, 0.62496vw, 24px);
+    font-size: clamp(7px, 0.72912vw, 28px);
     &:hover {
       @apply bg-primary text-primary-ALMOST_WHITE rounded-md;
     }
-=======
-    font-size: clamp(7.5px,0.7812vw,30px);
->>>>>>> f6858981c7870ccdaf87656a188b3f61b74ec5c5
   }
   &__icon {
     position: absolute;
@@ -23,9 +19,10 @@
     z-index: 4;
   }
   &__dropdown {
-    position: absolute;
+    background-color: #e6e6e6;
     position: absolute;
     z-index: 100;
     width: 100%;
+    @apply rounded-md;
   }
 }
