--- a/client/src/entities/PopUp/styles.module.scss
+++ b/client/src/entities/PopUp/styles.module.scss
@@ -1,13 +1,12 @@
 .popup {
+  width: 100vw;
+  height: 100vh;
+  background: rgba(0, 0, 0, 0.2);
   position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  display: none;
-  justify-content: center;
+  z-index: 1;
+  display: flex;
   align-items: center;
-  background-color: rgba(0, 0, 0, 0.5);
+  justify-content: center;
 
   &__items {
     background-color: #ffffff;
