--- a/client/src/entities/WebsitePopup/styles.module.scss
+++ b/client/src/entities/WebsitePopup/styles.module.scss
@@ -1,6 +1,6 @@
 .overlay {
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   background: rgba(0, 0, 0, 0.2);
   position: absolute;
   z-index: 1;
