--- a/client/src/features/HeaderEditor/styles.module.scss
+++ b/client/src/features/HeaderEditor/styles.module.scss
@@ -13,6 +13,7 @@
     width: 90%;
     display: flex;
     align-items: center;
+    justify-content: space-between;
 
     &__logo {
       width: clamp(32px, 3.33312vw, 128px);
