--- a/client/src/shared/ui/Generic_Components/PopupGeneric/styles.module.scss
+++ b/client/src/shared/ui/Generic_Components/PopupGeneric/styles.module.scss
@@ -14,6 +14,7 @@
   height: auto;
   display: flex;
   flex-direction: column;
+  justify-content: center;
   align-items: center;
   @apply p-8;
   @apply rounded-md;
