--- a/client/src/entities/DarkTheme/styles.module.scss
+++ b/client/src/entities/DarkTheme/styles.module.scss
@@ -7,15 +7,14 @@
   @apply rounded-full;
 
   &:hover {
-    @apply bg-gray-100;
+    @apply bg-gray-100 dark:bg-gray-800;
   }
 
-  .dark &:hover {
-    @apply bg-gray-800;
-  }
+
 
   &__icon {
     cursor: pointer;
     @apply text-primary;
   }
+  
 }
