--- a/client/src/entities/Popup_Components/WebsitePopup/styles.module.scss
+++ b/client/src/entities/Popup_Components/WebsitePopup/styles.module.scss
@@ -7,6 +7,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  // justify-content: center;
 }
 
 .website_popup {
@@ -20,7 +21,7 @@
   @apply bg-white;
 
   &__text {
-    @apply text-2xl;
+    @apply text-xl;
     @apply mt-4;
     @apply mb-4;
   }
