--- a/client/src/features/Menu/styles.module.scss
+++ b/client/src/features/Menu/styles.module.scss
@@ -6,6 +6,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  @apply bg-gray-100;
 
   &__logo {
     width: clamp(45px, 4.6872vw, 180px);
