--ADDED NEW POPUP

--- a/client/src/entities/Popup_Components/CodePopup/styles.module.scss
+++ b/client/src/entities/Popup_Components/CodePopup/styles.module.scss
@@ -1,1 +1,35 @@
+.overlay {
+  width: 81%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.2);
+  position: absolute;
+  z-index: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 
+.website_popup {
+  width: clamp(250px, 26.04vw, 1000px);
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  @apply p-8;
+  @apply rounded-md;
+
+  &__text {
+    text-align: center;
+    @apply text-xl;
+    @apply mt-4;
+    @apply mb-4;
+  }
+
+  &__code {
+  }
+
+  &__logo {
+    width: clamp(40px, 4.1664vw, 160px);
+    height: clamp(40px, 4.1664vw, 160px);
+  }
+}
