--- a/client/src/shared/ui/Generic_Components/PopupGeneric/styles.module.scss
+++ b/client/src/shared/ui/Generic_Components/PopupGeneric/styles.module.scss
@@ -1,7 +1,7 @@
 .overlay {
-  width: 100%;
+  width: 81%;
   height: 100%;
-  background: rgba(0, 0, 0, 0.2);
+  background: rgba(0, 0, 0, 0.4);
   position: absolute;
   z-index: 1;
   display: flex;
@@ -19,4 +19,5 @@
   @apply p-8;
   @apply rounded-md;
   @apply bg-white;
+  @apply animate-glow-orange;
 }
