--ADDED NEW ROUTE FOR WEBSITE VERIFICATION

--- a/client/src/entities/Tabs_Components/WebsiteTab/styles.module.scss
+++ b/client/src/entities/Tabs_Components/WebsiteTab/styles.module.scss
@@ -4,7 +4,7 @@
   margin-right: auto;
   @apply mt-8;
   @apply ml-16;
-  @apply bg-primary-ALMOST_WHITE;
+  @apply bg-gray-100;
   border-radius: 6px;
   transition: 0.3s all;
   &:hover {
