--- a/client/src/shared/styles/global.scss
+++ b/client/src/shared/styles/global.scss
@@ -1,3 +1,7 @@
+@import "breakpoint-slicer";
+@import "../styles/mixins";
+@import "../styles/variables";
+
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap");
 
 @tailwind base;
