--- a/client/src/widgets/Screens/usersPage/styles.module.scss
+++ b/client/src/widgets/Screens/usersPage/styles.module.scss
@@ -9,3 +9,16 @@
   }
 }
 
+
+.container{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  height: 70vh;
+      &__already{
+          @apply mt-12; 
+          font-size: clamp(9px, 18 / 1360 * 100vw, 36px);;
+      }
+  }
+  
