--CHECK IS ADMIN SHOULD WORK NOW

--- a/client/src/entities/PageCard/styles.module.scss
+++ b/client/src/entities/PageCard/styles.module.scss
@@ -9,6 +9,7 @@
   flex-direction: column;
   cursor: pointer;
   transition: 0.3s all;
+  border: none;
   @apply rounded-md;
   @apply bg-gray-100;
 
