--- a/client/src/features/PageTypeSelector/styles.module.scss
+++ b/client/src/features/PageTypeSelector/styles.module.scss
@@ -1,7 +1,8 @@
 .page_type_selector {
-  width: 100%;
+  width: 92%;
   display: flex;
   align-items: center;
+  justify-content: space-between;
   @apply gap-4;
   @apply mt-8;
 }
