--- a/client/src/features/Menu/styles.module.scss
+++ b/client/src/features/Menu/styles.module.scss
@@ -1,7 +1,8 @@
 .menu {
   top: 0;
   position: sticky;
-  width: clamp(225px,23.436vw,900px);
+  z-index: 3;
+  width: clamp(225px, 23.436vw, 900px);
   height: 100vh;
   display: flex;
   flex-direction: column;
