--- a/client/src/shared/ui/CloseMenuButton/styles.module.scss
+++ b/client/src/shared/ui/CloseMenuButton/styles.module.scss
@@ -8,7 +8,7 @@
   right: clamp(-8px, -0.83328vw, -32px);
   width: clamp(12px, 1.24992vw, 48px);
   height: clamp(12px, 1.24992vw, 48px);
-  z-index: 1000;
+  z-index: 3 !important;
   display: flex;
   align-items: center;
   justify-content: center;
