--- a/client/src/features/PageCardsLayout/styles.module.scss
+++ b/client/src/features/PageCardsLayout/styles.module.scss
@@ -12,8 +12,8 @@
 
   @include respond-to("5xl") {
     display: grid;
-    grid-template-columns: repeat(4, 1fr); /* 4 столбца в первом ряду */
-    grid-template-rows: auto auto; /* Две строки */
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: auto auto;
     gap: 20px;
   }
 }
