--- a/client/src/features/HeaderBuild/styles.module.scss
+++ b/client/src/features/HeaderBuild/styles.module.scss
@@ -1,14 +1,15 @@
 .header {
-    width: 500px;
+    width: clamp(250px,26.04vw,1000px);
     display: flex;
     justify-content: space-between;
     align-items: center;
     flex-wrap: nowrap;
-    height: 60px;
+    height: clamp(30px,3.1248vw,120px);
     max-width: 100vw;
+    display: flex;
+    flex-direction: row;
 
     &__left {
-        max-width: calc(100vw - 500px - 40px);
         margin-right: 40px;
     }
 
@@ -22,6 +23,20 @@
             flex-shrink: 0;
             margin: 0 10px;
             opacity: .5;
+        }    
+        &_icon {
+            display: flex;
+            align-items: center;
+            @apply text-sm;
+            @apply ml-4;
+            flex-grow: 1;
+            flex-shrink: 1;
+            text-overflow: ellipsis;
+            height: clamp(8px,0.83328vw,32px);
+
+            &:hover {
+                @apply text-primary;
+            }
         }
     }
 }
