--- a/client/src/shared/styles/global.scss
+++ b/client/src/shared/styles/global.scss
@@ -2,6 +2,7 @@
 @import "../styles/mixins";
 @import "../styles/variables";
 
+@import url("https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200..1000;1,200..1000&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap");
 
 @tailwind base;
